KIK-2425, Fix spacing of Messaging Credits

--- a/app/assets/less/layout/_header.less
+++ b/app/assets/less/layout/_header.less
@@ -292,6 +292,7 @@
 .get-credits {
   color: #101010;
   padding-top: 17px;
+  padding-left: 12px;
   line-height: 30px;
   > * {
     .align(@align: middle);
